# flappy-bird-bevy

./: .gitignore  .gitmodules  Cargo.toml  README.md  wasm.sh
docs/: flappy-bird_bg.wasm.d.ts  index.html
neuralnetwork/: Cargo.toml
neuralnetwork/src/: lib.rs
public/: flappy-bird.d.ts  flappy-bird.js  index.css
src/: bird.rs  knarkzel.rs  lib.rs  main.rs  neuralnetwork.rs  pipe.rs
