[package]
name = "game"
version = "0.1.0"
authors = ["Knarkzel <knarkzel@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { path = "../bevy", features = ["dynamic"] }
coaster = "0.1.1"
juice = { version = "0.2.5", default-features = false, features = ["native"] }
knarkzel = "0.4"

[profile.dev.package.bevy]
opt-level = 1
